<resources>
    <string name="app_name">Theia</string>
    <string name="no_notes">No Notes Yet</string>
    <string name="action_settings">Settings</string>
    <string name="menu_insert">Add Item</string>
    <string name="menu_delete">Delete Note</string>
    <string name="menu_edit">Edit Note</string>
    <string name="menu_deletec">Delete Category</string>
    <string name="menu_editc">Edit Category</string>
    <string name="menu_email">Send Email</string>
    <string name="menu_sms">Send SMS</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Confirm</string>
    <string name="edit_note">Edit Note</string>
    <string name="menu_test">Test App</string>
    <string name="edit_category">Edit Category</string>
    <string name="title_activity_note_edit">EditNote</string>

    <string name="notes">Notes</string>
    <string name="categories">Categories</string>

</resources>
